objects/LBI__LatticeEndpoints__c.object
<CustomObject>
    <fields>
        <fullName>LBI__BatchControlled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this endpoint batch controlled? (Not to be changed by an admin)</description>
        <label>Batch Controlled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__BatchSize__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__EndpointName__c</fullName>
        <label>EndpointName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Endpoints</relationshipLabel>
        <relationshipName>LatticeEndpoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__ProtocolAndFQDN__c</fullName>
        <defaultValue>&quot;https://api.lattice-engines.com&quot;</defaultValue>
        <description>Base url and fully qualified domain name.</description>
        <label>Protocol And FQDN</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__URLPath__c</fullName>
        <label>URL Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lattice Endpoint</label>
    <nameField>
        <displayFormat>LE-{000000}</displayFormat>
        <label>Lattice Endpoints Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Endpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>